did sessions & middleware

--- a/internal/templates/home.templ
+++ b/internal/templates/home.templ
@@ -1,9 +1,17 @@
 package templates
 
+import (
+ //   "dailygardenguide/internal/db"
+)
+
 templ Home() {
     <html>
-        <body>
+        <body style="background-color: black; color: orange;">
             <h1>Home</h1>
+            <button>Add Garden</button>
+//            for _, garden := range(gardens) {
+//            <li>{ garden.Name }</li>
+//            }
         </body>
     </html>
 }
