--- a/internal/templates/auth.templ
+++ b/internal/templates/auth.templ
@@ -3,17 +3,28 @@ package templates
 var loggingIn bool
 
 templ AuthenticationPage() {
-    if loggingIn {
-        <h3>Log In</h3>
-        <input placeholder="Username" type="text"></input>
-        <input placeholder="Password" type="text"></input>
-        <button type="submit">Submit</button>
-    } else {
-        <h3>Register</h3>
-        <input placeholder="Username" type="text"></input>
-        <input placeholder="Password" type="text"></input>
-        <input placeholder="Confirm Password" type="text"></input>
-        <button type="submit">Submit</button>
-    }
+    <html>
+        <body style="background-color: black; color: orange;">
+            if loggingIn {
+                <h3>Log In</h3>
+                <input placeholder="Username" type="text"></input>
+                <input placeholder="Password" type="text"></input>
+                <button type="submit">Submit</button>
+            } else {
+                <h3>Register</h3>
+                <input placeholder="Username" type="text"></input>
+                <input placeholder="Password" type="text"></input>
+                <input placeholder="Confirm Password" type="text"></input>
+                <button type="submit">Submit</button>
+            }
+            <button>
+                if loggingIn { 
+                    Go to Registration 
+                } else { 
+                    Go to Login 
+                }
+            </button>
+        </body>
+    </html>
 }
 
